DTraceTools are all of the DTrace scripts we provide
to customers that work inside SmartMachines.  This
package is available in pkgsrc: 'dtracetools'

dtracetools-0.1
* initial release

dtracetools-x.x
* removed dtrace-pathopens.d
* updated dtrace-php_flow.d to work